# OBT

./: .env.example  .gitignore  .pre-commit-config.yaml  .windsurfrules  LICENSE  README.md  install.sh  start.sh
backend/: .pre-commit-config.yaml  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: benchmarks.py  clients.py  hardware.py  models.py  prompts.py  tests.py
backend/app/benchmarks/core/: benchmark_engine.py
backend/app/benchmarks/schemas/: benchmark.py
backend/app/benchmarks/storage/: benchmark_storage.py
backend/app/benchmarks/tests/: test_benchmark_engine.py
backend/app/core/: config.py
backend/app/models/: base.py  hardware.py  ollama.py
backend/app/services/: hardware.py  ollama.py  prompts.py  test_runner.py
docker/: docker-compose.yml
docker/mongodb/: init-mongo.js  mongod.conf
docs/: api-spec.md  architecture.md  codebaseSummary.md  currentTask.md  database-schema.md  projectRoadmap.md  setup-guide.md  techStack.md
frontend/: .eslintrc.cjs  eslint.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/components/: PromptModal.svelte
frontend/src/lib/stores/: benchmark.ts  hardwareStore.ts  promptStore.ts
frontend/src/lib/types/: benchmark.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/benchmark/: +page.svelte
frontend/src/routes/benchmarks/: +page.svelte  BenchmarkChart.svelte  BenchmarkComparison.svelte  BenchmarkDetails.svelte  HardwareSelector.svelte  ModelManager.svelte  TestPromptSelector.svelte
frontend/src/routes/models/: +page.svelte  +page.ts
frontend/src/routes/results/: +page.svelte
frontend/src/routes/tests/: +page.svelte
ollama-client/: .env.example  README.md  hardware_info.py  install.ps1  install.sh  main.py  requirements.txt  show_hardware_info.py  start.ps1  start.sh
prompts/: codingLandingpage.md  codingSudokoGame.md  writing500words.md
