[tool.poetry]
name = "obt"
version = "0.0.0"
description = "Ollama Benchmark Tool - A comprehensive benchmarking suite for Ollama models"
authors = ["Mikkel Georgsen <mikkel@datalos.com>"]
license = "MIT"
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
motor = "^3.3.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"
psutil = "^5.9.0"
aiohttp = "^3.8.0"
py-cpuinfo = "^9.0.0"
GPUtil = "^1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.0"
ruff = "^0.0.280"
httpx = "^0.24.0"
pytest-mock = "^3.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
