[tool.poetry]
name = "obt"
version = "0.0.0"
description = "Ollama Benchmark Tool"
authors = ["Mikkel Georgsen"]
readme = "../README.md"
packages = [{include = "app"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.1"
uvicorn = "^0.23.2"
motor = "^3.6.1"
pydantic = "^2.10.6"
pydantic-settings = "^2.7.1"
python-dotenv = "^1.0.1"
psutil = "^5.9.8"
aiohttp = "^3.11.11"
py-cpuinfo = "^9.0.0"
GPUtil = "^1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.21.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.14.0"
httpx = "^0.24.1"
black = "^23.12.1"
isort = "^5.13.2"
ruff = "^0.0.280"
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "B", "I"]
ignore = ["B008"]  # Ignore function calls in argument defaults (needed for FastAPI)

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
